--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ember-cli-shims": "0.1.1",
     "ember-qunit-notifications": "0.1.0",
     "bootstrap-sass": "^3.3.7",
-    "firebase": "^3.0.0"
+    "firebase": "^3.0.0",
+    "Faker": "^3.1.0"
   }
 }
