--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.1",
     "emberfire": "2.0.1",
+    "faker": "3.1.0",
     "loader.js": "^4.0.1"
   }
 }
